ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-staging-clusterissuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - podinfo.elits1.larnet.eu
      secretName: dashboard-cert-staging
  rules:
    - host: podinfo.elits1.larnet.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
